<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_padding_medium1"
            android:layout_marginRight="@dimen/common_padding_medium1"
            android:gravity="center_vertical|center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_pin"
                android:adjustViewBounds="true"
                android:id="@+id/btnBack"
                android:layout_marginBottom="@dimen/common_padding_small2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_padding_medium">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_distance"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_padding_small2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/metres_min"
                        android:layout_marginTop="@dimen/common_padding_medium"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/metres"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top">
                    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                        android:id="@+id/seekBar"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/common_padding_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:dsb_indicatorColor="@color/colorAccent"
                        app:dsb_indicatorFormatter="@string/indicator_format_distance"
                        app:dsb_progressColor="@color/colorAccent"
                        app:dsb_rippleColor="@android:color/holo_green_light"
                        app:dsb_mirrorForRtl="false"
                        app:dsb_trackColor="@android:color/darker_gray"
                        app:dsb_min="50"
                        app:dsb_max="500" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/common_padding_large">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/metres_max"
                        android:layout_marginTop="@dimen/common_padding_medium"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/metres"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>