<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="@dimen/common_padding_small2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round"
            android:layout_marginBottom="@dimen/common_padding_small1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_padding_large"
                    android:text="@string/check_in_loaction"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="@dimen/common_padding_medium1"
                    android:layout_marginTop="@dimen/common_padding_small2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_padding_small"
                    android:background="@android:color/darker_gray">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/ic_check_in_location"
                        android:layout_marginTop="@dimen/common_padding_medium2"
                        android:layout_marginBottom="@dimen/common_padding_medium1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/common_padding_small3"
                        android:text="@string/check_in_state"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>
                </LinearLayout>
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/common_padding_small1"
            android:layout_marginBottom="@dimen/common_padding_small1">
            <Button
                android:id="@+id/btSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/confirm"
                android:textColor="@color/colorRed"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>