<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@android:color/transparent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_onboarding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"></LinearLayout>
            <ImageView
                android:layout_weight=".8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/onboarding_graphics1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:gravity="top|center_horizontal">
                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/onboard2_title"
                        android:textColor="@color/colorFont"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:includeFontPadding="false"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_marginTop="-5dp"
                        android:text="@string/onboard2_undertitle"
                        android:textColor="@color/colorAccent"
                        android:textStyle="italic"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="3"
                        android:textSize="14sp"
                        android:text="@string/onboard2_description"
                        android:textAlignment="center"
                        android:textColor="#a554ed"
                        android:lineSpacingExtra="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
